[package]
name = "cueball-static-resolver"
version = "0.2.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
edition = "2018"

[dependencies]
cueball = { git = 'https://github.com/joyent/rust-cueball', branch = "MANTA-4630" }

[dev-dependencies]
cueball-tcp-stream-connection = { git = 'https://github.com/joyent/cueball-tcp-stream-connection', branch = "MANTA-4630" }
slog = "2.4.1"
slog-term = "2.4.0"
