[package]
name = "cueball-static-resolver"
version = "0.1.2"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]
edition = "2018"

[dependencies]
cueball = { git = 'https://github.com/joyent/rust-cueball', tag = "v0.1.1" }

[dev-dependencies]
cueball-tcp-stream-connection = { git = 'https://github.com/joyent/cueball-tcp-stream-connection', tag = "v0.1.4" }
slog = "2.4.1"
slog-term = "2.4.0"